# retrolens

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  PUBLISHING.md  README.md  RELEASE.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json
.flowcraft/: refactor-skill.workflow.yaml  skill_refactoring_agent.py
.github/: RELEASE_CHECKLIST.md
.github/skills/flowcraft-distill/: SKILL.md
.github/skills/retrolens/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: RELEASE_COMPARISON.md  RELEASE_FLOW.md  TOOLS.md  TROUBLESHOOTING.md
notes/: file_read_pattern.md
retrolens-plugin/: SKILL.md
retrolens-plugin/commands/: analyze.md  connect.md  discover.md  reflect.md  retrolens.md
retrolens-plugin/scripts/: validate_reader.py
scripts/: release.sh
skill/: SKILL.md
skill/.claude-plugin/: plugin.json
skill/references/: READER-API.md
skill/scripts/: find_logs.sh  sample_log.py  setup.sh
src/flowcraft/: __init__.py  cli.py  formatters.py  models.py  workflow_dsl.py
src/flowcraft/readers/: __init__.py  flowcraft_native.py
src/flowcraft/skills/: SKILL.md
src/flowcraft/skills/templates/: LANGGRAPH_TEMPLATE.py  LESSONS_TEMPLATE.md  REFLECTION_TEMPLATE.md  WORKFLOW_DSL_TEMPLATE.yaml  WORKFLOW_TEMPLATE.md
src/flowcraft_backup/: __init__.py  config.py
src/flowcraft_backup/cli/: __init__.py  daemon.py  daemon_worker.py  main.py
src/flowcraft_backup/codegen/: __init__.py  dsl.py  langgraph.py
src/flowcraft_backup/distiller/: __init__.py  compressor.py  engine.py
src/flowcraft_backup/inspector/: __init__.py  engine.py  memory.py  planning.py  rounds.py  tools.py
src/flowcraft_backup/llm/: __init__.py  client.py
src/flowcraft_backup/mcp/: __init__.py  server.py
src/flowcraft_backup/recorder/: __init__.py  server.py  storage.py
src/flowcraft_backup/recorder/transformers/: __init__.py  anthropic.py  base.py  openai.py  unified.py
src/flowcraft_backup/reflector/: __init__.py  engine.py
src/flowcraft_backup/schemas/: __init__.py  models.py
src/flowcraft_backup/utils/: __init__.py  common.py
src/retrolens/: __init__.py  cli.py  config.py  detect.py  formatters.py  models.py  workflow_dsl.py
src/retrolens/readers/: __init__.py  claude_code.py  retrolens_native.py  vscode_copilot.py
src/retrolens/skills/: DISCOVERY.md  SKILL.md
src/retrolens/skills/templates/: LANGGRAPH_TEMPLATE.py  LESSONS_TEMPLATE.md  REFLECTION_TEMPLATE.md  WORKFLOW_DSL_TEMPLATE.yaml
tests/: conftest.py  test_claude_code_reader.py  test_config.py  test_distill_cli.py  test_imports.py  test_models.py  test_readers.py
tests/fixtures/: sample_claude_code_session.jsonl  sample_vscode_session.jsonl
tools/: __init__.py
tools/analyzer/: __init__.py  cli.py  engine.py  mcp_server.py
tools/listener/: __init__.py  adapter.py  storage.py
