[project]
name = "rev-agent"
version = "0.1.0"
description = "Claude Code reverse analysis proxy layer"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
rev-agent = "adapter:main"
rev-cli = "cli:main"
rev-mcp = "mcp_server:main"

[tool.uv]
dev-dependencies = []
